@@ -440,6 +440,7 @@ SV* FUNCPTR( wxPli_create_virtual_evthandler )( pTHX_ wxEvtHandler* object,
                                         const char* classn, bool forcevirtual );
 wxPliSelfRef* FUNCPTR( wxPli_get_selfref )( pTHX_ wxObject* object, bool forcevirtual );
 SV* FUNCPTR( wxPli_object_2_scalarsv )( pTHX_ SV* var, const wxObject* object );
+SV* FUNCPTR( wxPli_namedobject_2_sv )( pTHX_ SV* var, const wxObject* object, const char* package );
 
 #define WXPLI_BOOT_ONCE_( name, xs ) \
 bool name##_booted = false; \
@@ -537,6 +538,7 @@ struct wxPliHelpers
                                         const char* cln, bool forcevirtual );
     wxPliSelfRef* ( * m_wxPli_get_selfref )( pTHX_ wxObject*, bool);
     SV* ( * m_wxPli_object_2_scalarsv )( pTHX_ SV* var, const wxObject* object );
+    SV* ( * m_wxPli_namedobject_2_sv )( pTHX_ SV* var, const wxObject* object, const char* package );
 };
 
 #if wxPERL_USE_THREADS
@@ -581,7 +583,8 @@ wxPliHelpers name = { &wxPli_sv_2_object, \
  &wxPli_av_2_arrayint, &wxPli_set_events, &wxPli_av_2_arraystring, \
  &wxPli_objlist_push, &wxPliOutputStream_ctor, &wxPli_stringarray_push, \
  &wxPli_overload_error, &wxPli_sv_2_wxvariant, \
- &wxPli_create_virtual_evthandler, &wxPli_get_selfref, &wxPli_object_2_scalarsv \
+ &wxPli_create_virtual_evthandler, &wxPli_get_selfref, &wxPli_object_2_scalarsv, \
+ &wxPli_namedobject_2_sv \
  }
 
 #if NEEDS_PLI_HELPERS_STRUCT()
@@ -631,6 +634,7 @@ wxPliHelpers name = { &wxPli_sv_2_object, \
   wxPli_create_virtual_evthandler = name->m_wxPli_create_virtual_evthandler; \
   wxPli_get_selfref = name->m_wxPli_get_selfref; \
   wxPli_object_2_scalarsv = name->m_wxPli_object_2_scalarsv; \
+  wxPli_namedobject_2_sv = name->m_wxPli_namedobject_2_sv; \
   WXPLI_INIT_CLASSINFO();
 
 #else
